<resources>
    <string name="app_name">TagMemo</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_memo">MemoActivity</string>

    <string name="memo_title_hint">タイトル</string>
    <string name="memo_hint">メモを入力してください</string>
    <string name="buttonCancel">キャンセル</string>
    <string name="buttonSave">保存</string>
    <string name="item_add">追加</string>
    <string name="param.title">title</string>
    <string name="param.memo_id">memo_id</string>
    <string name="param.tag_id">tag_id</string>
    <string name="memo_tag_hint">タグ スペース区切りで複数設定できます</string>
    <string name="param.doRefreshDrawer">doRefreshDrawer</string>
</resources>
